--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <!-- <script type="text/javascript" src="./assets/js/jquery-3.3.1.min.js" defer></script> -->
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js" defer></script>
     <script type="text/javascript" src="./assets/js/main.js" defer></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132332373-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-132332373-2');
+    </script>
+    <script data-ad-client="ca-pub-3623430408704680" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
@@ -30,13 +40,18 @@
                 <div id="side-top">
                     <div id="id">
                         <!-- <img src="./assets/image/avatar.webp" alt="Avatar" id="avatar"> -->
-                        <img src="https://service-cbmgfizu-1253266055.gz.apigw.tencentcs.com/release/GetQQAvatar?target=bakaptr" alt="Avatar" id="avatar">
-                        <h1 id="name">bakaptr</h1>
+                        <img src="https://service-cbmgfizu-1253266055.gz.apigw.tencentcs.com/release/GetQQAvatar?target=bakaptr"
+                            alt="Avatar" id="avatar">
+                        <ruby>
+                            <h1 id="name">bakaptr</h1>
+                            <rt style="letter-spacing: 0.2em; opacity: .5;">Zhousiru</rt>
+                        </ruby>
                     </div>
                     <div id="overlay">
                         <div id="id-bar">
                             <!-- <img src="./assets/image/avatar.webp" alt="Avatar" id="avatar-small"> -->
-                            <img src="https://service-cbmgfizu-1253266055.gz.apigw.tencentcs.com/release/GetQQAvatar?target=bakaptr" alt="Avatar" id="avatar-small">
+                            <img src="https://service-cbmgfizu-1253266055.gz.apigw.tencentcs.com/release/GetQQAvatar?target=bakaptr"
+                                alt="Avatar" id="avatar-small">
                             <span id="name-small">bakaptr</span>
                         </div>
                         <div id="menu">
@@ -71,9 +86,14 @@
                     <div class="profile-main">
                         <h3>现状</h3>
                         <ul>
-                            <li>高中生，正在努力学习中（大概）</li>
-                            <li>是<span style="opacity:.3">小透明</span>，<span class="hover-black">喜欢窥屏（</span></li>
-                            <li>在另一些地方可能出现的称呼：Zhousiru</li>
+                            <li>一周读 6.5 天书的高中生</li>
+                            <li>是<span style="opacity:.3">小透明</span>，<span class="hover-black">性格大概内向吧</span></li>
+                        </ul>
+                        <h3>爱好</h3>
+                        <ul>
+                            <li>打 Minecraft、No Man's Sky，<span class="hover-black">偶尔打打 osu!（很菜就是了）</span></li>
+                            <li>对三维方面有兴趣</li>
+                            <li>有很多想学的，<span class="hover-black">但根本没时间/精力</span></li>
                         </ul>
                     </div>
                 </div>
@@ -83,17 +103,18 @@
                     </h2>
                     <div class="profile-main">
                         <div id="contact">
-                            <a title="长满杂草的 Lab" class="icon icon-experiment" href="https://rec.shinonome-lab.org"></a>
                             <a title="当阅读器的 Telegram" class="icon icon-telegram" href="https://t.me/bakaptr"></a>
-                            <a title="只会点赞的 Twitter" class="icon icon-twitter" href="https://twitter.com/Zhousiru0621"></a>
-                            <a title="开机自启的 Steam" class="icon icon-steam" href="https://steamcommunity.com/id/bakaptr"></a>
+                            <a title="只会点赞的 Twitter" class="icon icon-twitter"
+                                href="https://twitter.com/Zhousiru0621"></a>
+                            <a title="开机自启的 Steam" class="icon icon-steam"
+                                href="https://steamcommunity.com/id/bakaptr"></a>
                             <a title="不经常看的 E-mail" class="icon icon-mail" href="mailto:i@zhousiru.com"></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <footer id="footer">© bakaptr</footer>
+        <footer id="footer"><a href="https://github.com/Zhousiru/qxq.moe">© bakaptr</a></footer>
     </div>
     </div>
 </body>
